test/asm/garbage_sequence.err
error: garbage_sequence.asm(1):
    Invalid character '#'
error: garbage_sequence.asm(2):
    Invalid characters '?', 0xFF (is the file UTF-8?)
error: garbage_sequence.asm(3):
    Invalid characters '?', 0xFF, '?' (is the file UTF-8?)
error: garbage_sequence.asm(3):
    Invalid character '#'
error: garbage_sequence.asm(3):
    Invalid characters '#', '?', '?'
Assembly aborted with 5 errors!
